# zercalo

./: .gitignore  Cargo.toml  shell.nix
assets/models/: harvester_track_01.vox  harvester_track_02.vox  harvester_track_03.vox  penetrator_full.vox
assets/models/harvester/: harvester_body.vox  harvester_collector.vox
assets/models/sandworm/: worm_01.vox  worm_02.vox  worm_03.vox  worm_04.vox  worm_05.vox  worm_06.vox
zercalo-format/: Cargo.toml
zercalo-format/src/: animation.rs  color.rs  lib.rs  scene.rs
zercalo-format/src/animation/: animatable.rs  composition.rs  mod.rs  renderable.rs  rotation.rs  stepper.rs  switcher.rs
zercalo-format/src/import/: mod.rs  vox.rs
zercalo-format/src/procedure/: mod.rs  particles.rs  smoke.rs
zercalo-format/src/scene/: camera.rs  getters.rs  light.rs  mod.rs  model.rs
zercalo-render/: Cargo.toml
zercalo-render/src/: encode.rs  lib.rs  main.rs  render.rs
zercalo-viewer/: Cargo.toml
zercalo-viewer/src/: main.rs
zercalo-viewer/src/scenes/: dune_tile.rs  harvester.rs  mod.rs  penetrator.rs  sand.rs  sandworm.rs  smoke.rs  teapot.rs
