[package]
name = "zercalo-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dot_vox = "4.1.0"
fastrand = "1.7.0"
glam = "0.20.2"
log = "0.4.14"
noise = "0.7.0"
rayon = "1.5.1"
thiserror = "1.0.30"