[package]
name = "zercalo-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-voxel-traversal = "0.5.0"
glam = "0.20.2"
sdl2 = { version = "0.35.2" }
png = "0.17.5"
zercalo-format = { path = "../zercalo-format" }