[package]
name = "zercalo-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apng = "0.2.0"
fast-voxel-traversal = "0.5.0"
glam = "0.20.2"
log = "0.4.14"
png = "0.16.0"
rayon = "1.5.1"
sdl2 = { version = "0.35.2" }
thiserror = "1.0.30"
zercalo-format = { path = "../zercalo-format" }