[package]
name = "zercalo-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
glam = "0.20.2"
log = "0.4.14"
sdl2 = { version = "0.35.2" }
zercalo-format = { path = "../zercalo-format" }
zercalo-render = { path = "../zercalo-render" }